adding the cart + and - functionality. Adding a dropdown on the product page.

--- a/themes/RogersHood-theme/assets/css/frontend/style.css
+++ b/themes/RogersHood-theme/assets/css/frontend/style.css
@@ -35,6 +35,8 @@
 
 @import url("components/index.css");
 
+
+@import url("woocommerce/index.css");
 /* Gutenberg blocks */
 
 /* @import url("../blocks/index.css"); */
