--- a/themes/RogersHood-theme/assets/css/frontend/components/archive-product.css
+++ b/themes/RogersHood-theme/assets/css/frontend/components/archive-product.css
@@ -105,6 +105,18 @@
 	z-index: 5;
 }
 
+.product-indicator {
+	background-color: var(--wp--preset--color--white);
+	border-radius: 48px;
+	color: var(--wp--preset--color--black);
+	font-size: clamp(0.75rem, 2vw + 1rem, 0.875rem);
+	padding: 10px 33px;
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	z-index: 10;
+}
+
 @media only screen and (--bp-large-2) {
 	.woo-archive__container {
 		padding: 70px 104px 100px 104px;
