--- a/themes/RogersHood-theme/assets/css/frontend/components/footer.css
+++ b/themes/RogersHood-theme/assets/css/frontend/components/footer.css
@@ -26,6 +26,7 @@
 
 .footer__menu > li > a {
 	color: var(--wp--preset--color--white);
+	font-size: 16px;
 	line-height: 32px;
 	text-decoration: none;
 }
