--- a/themes/RogersHood-theme/assets/css/frontend/base/link.css
+++ b/themes/RogersHood-theme/assets/css/frontend/base/link.css
@@ -9,6 +9,7 @@
 
 a:where(:not(.components-external-link)) {
 	color: var(--wp--preset--color--green);
+	font-size: 16px;
 	font-weight: 300;
 	line-height: 24px;
 }
