--- a/themes/RogersHood-theme/assets/css/frontend/components/header.css
+++ b/themes/RogersHood-theme/assets/css/frontend/components/header.css
@@ -8,6 +8,7 @@
 
 .store-notifications__text {
 	color: var(--wp--preset--color--white);
+	font-size: 16px;
 	line-height: 22px;
 	text-transform: uppercase;
 }
@@ -41,6 +42,7 @@
 
 .header__menu > li > a {
 	color: var(--wp--preset--color--black);
+	font-size: 16px;
 	text-decoration: none;
 }
 
