--- a/themes/RogersHood-theme/assets/css/frontend/components/hero-section.css
+++ b/themes/RogersHood-theme/assets/css/frontend/components/hero-section.css
@@ -58,6 +58,7 @@
 
 .hero-section-final-title {
 	color: var(--wp--preset--color--white);
+	font-size: clamp(1.563rem, 2vw + 1rem, 3.25rem);
 	text-align: center;
 }
 
@@ -83,6 +84,7 @@
 }
 
 .wysig-video__container {
+	font-size: 16px;
 	margin-bottom: 32px;
 }
 
@@ -134,6 +136,7 @@
 	}
 
 	.wysig-video__container {
+		font-size: clamp(1rem, 2vw + 1rem, 1.375rem);
 		margin-bottom: 32px;
 	}
 }
