--- a/themes/RogersHood-theme/assets/css/frontend/layout/layout-index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/layout-index.css
@@ -10,10 +10,6 @@ html.fonts-loaded {
 	margin-top: 0 !important;
 }
 
-#main {
-	overflow-x: hidden;
-}
-
 img,
 picture,
 video {
@@ -25,8 +21,8 @@ video {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 1440px;
-	padding-left: 22px;
-	padding-right: 22px;
+	padding-left: 14px;
+	padding-right: 14px;
 	width: 100%;
 }
 
@@ -34,27 +30,15 @@ video {
 	max-width: 820px;
 }
 
-.rh-full-block {
-	margin-left: calc(50% - 50vw);
-	max-width: 100vw;
-	width: 100vw;
+.rh-block--full-bleed {
+	margin-left: -14px;
+	margin-right: -14px;
 }
 
 .rh-block {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 1240px;
-}
-
-@media all and (max-width: 992px) {
-	.rh-block {
-		padding-bottom: 50px;
-		padding-top: 50px;
-	}
-
-	.col-sm-hidden {
-		display: none;
-	}
 }
 
 .container--tiny {
