--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -1,3 +1,5 @@
+@import url("../global/media-queries.css");
+
 /* Layout */
 
 * {
@@ -6,10 +8,6 @@
 
 html.fonts-loaded {
 	margin-top: 0 !important;
-}
-
-#main {
-	overflow-x: hidden;
 }
 
 img,
@@ -22,9 +20,9 @@ video {
 .container {
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 1240px;
-	padding-left: 22px;
-	padding-right: 22px;
+	max-width: 1440px;
+	padding-left: 14px;
+	padding-right: 14px;
 	width: 100%;
 }
 
@@ -32,10 +30,15 @@ video {
 	max-width: 820px;
 }
 
-.rh-full-block {
-	margin-left: calc(50% - 50vw);
-	max-width: 100vw;
-	width: 100vw;
+.rh-block--full-bleed {
+	margin-left: -14px;
+	margin-right: -14px;
+}
+
+.rh-block {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1240px;
 }
 
 .container--tiny {
@@ -55,6 +58,7 @@ body.admin-bar .header {
 }
 
 /*  TODO @SAM pls check */
+
 @media all and (min-width: 780px) {
 	body.admin-bar .header {
 		top: 32px;
@@ -65,10 +69,6 @@ body.admin-bar .header {
 	display: grid;
 	grid-gap: 20px;
 	grid-template-columns: repeat(12, 1fr);
-}
-
-.row-10 {
-	grid-template-columns: repeat(10, 1fr);
 }
 
 [class*=" col-"],
@@ -108,30 +108,13 @@ body.admin-bar .header {
 	grid-column: span 12;
 }
 
-/*  TODO @SAM pls check */
-.rh-block {
-	padding-bottom: 100px;
-	padding-top: 100px;
-}
-
 .col-lg-hidden {
 	display: none;
 }
 
 /*  TODO @SAM pls check */
-@media all and (--bp-until-phone) {
-	.rh-block {
-		padding-bottom: 50px;
-		padding-top: 50px;
-	}
 
-	.col-sm-hidden {
-		display: none;
-	}
-}
-
-/*  TODO @SAM pls check */
-@media all and (--bp-medium) {
+@media (--bp-medium) {
 	.col-md-1 {
 		grid-column: span 1;
 	}
@@ -174,13 +157,15 @@ body.admin-bar .header {
 }
 
 /*  TODO @SAM pls check */
-@media all and (--bp-medium) and (max-width: 992px) {
+
+@media all and (min-width: 768px) and (max-width: 992px) {
 	.col-md-hidden {
 		display: none;
 	}
 }
 
 /*  TODO @SAM pls check */
+
 @media all and (min-width: 993px) {
 	.col-lg-1 {
 		grid-column: span 1;
@@ -228,6 +213,7 @@ body.admin-bar .header {
 }
 
 /*  TODO @SAM pls check */
+
 @media all and (min-width: 1000px) {
 	.col-xl-6 {
 		grid-column: span 6;
