adding faq block, adding layout

--- a/themes/RogersHood-theme/assets/css/frontend/global/colors.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/colors.css
@@ -20,4 +20,14 @@
 
 :root {
 	--cart-background-beige: #F9F9F9;
+
+	--blue-background: #e0eaf7;
+}
+
+
+
+
+
+.bg-blue {
+	background-color: var(--blue-background);
 }
