--- a/themes/RogersHood-theme/assets/css/frontend/base/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/base/index.css
@@ -2,4 +2,5 @@
 @import url("wordpress.css");
 @import url("utils.css");
 @import url("button.css");
+@import url("typography.css");
 @import url("link.css");
