--- a/themes/RogersHood-theme/assets/css/frontend/style.css
+++ b/themes/RogersHood-theme/assets/css/frontend/style.css
@@ -25,7 +25,7 @@
 
 /* Layout - styles specific to layout */
 
-/* @import url("layout/index.css"); */
+@import url("layout/index.css");
 
 /* Templates */
 
