--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -20,18 +20,22 @@ video {
 	height: auto;
 	max-width: 100%;
 }
+.fs-block {
+	width: 1440px;
+	max-width: 100%;
+	padding-left: 20px;
+	padding-right: 20px;
+	position: relative;
+}
 
 .container {
+	max-width: 1180px;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 1240px;
-	padding-left: 22px;
-	padding-right: 22px;
-	width: 100%;
 }
 
 .container--narrow {
-	max-width: 820px;
+	max-width: 1550px;
 }
 
 .rh-full-block {
