--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -20,11 +20,15 @@ video {
 	height: auto;
 	max-width: 100%;
 }
+
+.page-container {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 .fs-block {
 	width: 1440px;
 	max-width: 100%;
-	padding-left: 20px;
-	padding-right: 20px;
 	position: relative;
 }
 
@@ -35,7 +39,7 @@ video {
 }
 
 .container--narrow {
-	max-width: 1550px;
+	max-width: 1050px;
 }
 
 .rh-full-block {
