--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -18,27 +18,36 @@ video {
 }
 
 .container {
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 1440px;
-	padding-left: 14px;
-	padding-right: 14px;
-	width: 100%;
+	width: 1180px;
+	max-width: 100%;
+	padding-left: 20px;
+	padding-right: 20px;
+	position: relative;
 }
 
 .container--narrow {
-	max-width: 820px;
+	max-width: 1050px;
 }
 
-.rh-block--full-bleed {
-	margin-left: -14px;
-	margin-right: -14px;
+.container--inner {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1050px;
 }
+
 
 .rh-block {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 1240px;
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+
+.rh-block--full-bleed {
+	margin-left: -20px;
+	margin-right: -20px;
 }
 
 .container--tiny {
@@ -69,6 +78,10 @@ body.admin-bar .header {
 	display: grid;
 	grid-gap: 20px;
 	grid-template-columns: repeat(12, 1fr);
+}
+
+.row--no-gap {
+	grid-gap: 0;
 }
 
 [class*=" col-"],
