--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -6,12 +6,13 @@
 	box-sizing: border-box;
 }
 
-html.fonts-loaded {
-	margin-top: 0 !important;
+body {
+	overflow-x:hidden;
 }
 
-#main {
-	overflow-x: hidden;
+
+html.fonts-loaded {
+	margin-top: 0 !important;
 }
 
 img,
@@ -27,9 +28,16 @@ video {
 }
 
 .rh-block {
-	width: 1440px;
-	max-width: 100%;
+	margin-left: calc(50% - 50vw);
+	max-width: 100vw;
+	width: 100vw;
 	position: relative;
+	padding: 100px 20px;
+}
+
+.rh-block--full-bleed {
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .container {
