--- a/themes/RogersHood-theme/assets/css/blocks/product-includes.css
+++ b/themes/RogersHood-theme/assets/css/blocks/product-includes.css
@@ -1,12 +1,12 @@
-/* Color not included in theme.json */
+/* TODO Color not included in theme.json */
+
 .product-includes {
 	background: #fcfbfb;
-	background: lavender;
 }
 
 .product-includes__topics {
-	display: flex;
 	align-items: center;
+	display: flex;
 	justify-content: center;
 }
 
@@ -16,14 +16,13 @@
 
 .product-includes__product__row {
 	background: var(--wp--preset--color--white);
-	margin: 0 14px;
 	border-radius: 12px;
 }
 
 .product-includes__product__image {
 	border-radius: 12px 12px 0 0;
-	object-fit: cover;
 	height: 100%;
+	object-fit: cover;
 	width: 100%;
 }
 
@@ -43,18 +42,20 @@
 	}
 }
 
-.product-includes__product__description .remove-on-mobile {
+.product-includes__product__section-title .remove-on-mobile {
 	display: none;
 }
 
 @media (--bp-medium) {
-	.product-includes__product__description .remove-on-mobile {
+	.product-includes__product____section-title .remove-on-mobile {
 		display: inline-block;
 	}
 }
+
 .product-includes__product__content__inner {
-	padding:40px;
+	padding: 40px;
 }
+
 @media (--bp-medium) {
 	.product-includes__product__content__inner {
 		padding: 80px;
@@ -67,7 +68,6 @@
 }
 
 @media (--bp-medium) {
-
 	.product-includes__product__title {
 		font-family: var(--wp--preset--font-family--scilla);
 		font-size: 30px;
@@ -77,6 +77,7 @@
 .product-includes__product__section-title {
 	margin-bottom: 12px;
 }
+
 .product-includes__product__section {
 	margin-bottom: 24px;
 }
