--- a/themes/RogersHood-theme/assets/css/frontend/style.css
+++ b/themes/RogersHood-theme/assets/css/frontend/style.css
@@ -39,4 +39,4 @@
 @import url("woocommerce/index.css");
 /* Gutenberg blocks */
 
-/* @import url("../blocks/index.css"); */
+ @import url("../blocks/index.css");
