--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -32,6 +32,15 @@ video {
 	width: 100vw;
 }
 
+
+@media all and (min-width: 1440px) {
+	.rh-block {
+		margin-left: -20px;
+		margin-right: -20px;
+		max-width: 1440px;
+	}
+}
+
 .rh-block--full-bleed {
 	padding-left: 0;
 	padding-right: 0;
