--- a/themes/RogersHood-theme/assets/css/styleguide/styleguide.css
+++ b/themes/RogersHood-theme/assets/css/styleguide/styleguide.css
@@ -202,7 +202,7 @@
 	gap: 6px;
 	margin-bottom: 1em;
 }
-
+/*
 .button-primary {
 	background-color: var(--wp--preset--color--light-blue);
 	border: 1px solid var(--wp--preset--color--light-blue);
@@ -233,7 +233,7 @@
 	background-color: var(--wp--preset--color--green);
 	border: 1px solid var(--wp--preset--color--green);
 	color: var(--wp--preset--color--white);
-}
+} */
 
 @media (--bp-uikit-small) {
 	.uikit__section > .heading {
