--- a/themes/RogersHood-theme/assets/css/blocks/community-cards.css
+++ b/themes/RogersHood-theme/assets/css/blocks/community-cards.css
@@ -8,9 +8,18 @@
 	margin-bottom: 64px;
 }
 
-.community-card {
-	position: relative;
+.community-card__row {
+	row-gap: 50px;
+}
 
+.community-card {
+	justify-self: center;
+	max-width: 300px;
+}
+
+.community-card__image-container {
+	position: relative;
+	text-align: center;
 }
 
 /* TODO - remove bcg and width ofcta */
@@ -18,9 +27,35 @@
 .community-card__cta {
 	background: var(--wp--preset--color--white);
 	border-radius: 42px;
-	bottom: 40%;
+	bottom: 50px;
 	height: 50px;
 	left: calc(50% - 80px);
 	position: absolute;
 	width: 160px;
+}
+
+@media (--bp-medium) {
+	.community-card__image {
+		filter: grayscale(100%);
+		transition: filter 0.3s ease, transform 0.3s ease;
+	}
+
+	.community-card.is-active .community-card__image {
+		filter: none;
+	}
+
+	.community-card .community-card__cta {
+		display: none;
+		opacity: 0;
+		transition: opacity 0.3s ease;
+	}
+
+	.community-card.is-active .community-card__cta {
+		display: block;
+		opacity: 1;
+	}
+
+	.community-card {
+		transition: transform 0.3s ease;
+	}
 }
