--- a/themes/RogersHood-theme/assets/css/frontend/components/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/components/index.css
@@ -6,6 +6,8 @@
 
 @import url("footer.css");
 
+@import url("lightBox.css");
+
 @import url("archive-product.css");
 
 @import url("single-product.css");
