--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -271,3 +271,12 @@ body.admin-bar .header {
 .grid-rowspan-3 {
 	grid-row: span 3;
 }
+
+@media all and (min-width: 1480px) {
+	.rh-block {
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+		max-width: 1480px;
+	}
+}
