--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -7,5 +7,9 @@
 /* @import url("example-block.css"); */
 
 @import url("text-and-image-callout.css");
+
 @import url("product-includes.css");
+
 @import url("community-cards.css");
+
+@import url("hub-cards.css");
