--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -3,7 +3,12 @@
  * https://project-website.tld
  *
  */
+/* @import url("example-block.css"); */
 
- @import url("faq.css");
- @import url("founders-slider.css");
- @import url("ingredient-grid.css");
+@import url("text-and-image-callout.css");
+
+@import url("product-includes.css");
+
+@import url("community-cards.css");
+
+@import url("hub-cards.css");
