--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -1,15 +1,12 @@
 /* Layout */
-/* @import url("../global/media-queries.css"); */
 
-/* Layout */
 * {
 	box-sizing: border-box;
 }
 
 body {
-	overflow-x:hidden;
+	overflow-x: hidden;
 }
-
 
 html.fonts-loaded {
 	margin-top: 0 !important;
@@ -30,9 +27,17 @@ video {
 .rh-block {
 	margin-left: calc(50% - 50vw);
 	max-width: 100vw;
-	width: 100vw;
-	position: relative;
 	padding: 100px 20px;
+	position: relative;
+	width: 100vw;
+}
+
+@media all and (min-width: 1440px) {
+	.rh-block {
+		margin-left: -20px;
+		margin-right: -20px;
+		max-width: 1440px;
+	}
 }
 
 .rh-block--full-bleed {
@@ -41,9 +46,9 @@ video {
 }
 
 .container {
-	max-width: 1180px;
 	margin-left: auto;
 	margin-right: auto;
+	max-width: 1180px;
 }
 
 .container--narrow {
@@ -73,6 +78,7 @@ body.admin-bar .header {
 }
 
 /*  TODO @SAM pls check */
+
 @media all and (min-width: 780px) {
 	body.admin-bar .header {
 		top: 32px;
@@ -126,17 +132,12 @@ body.admin-bar .header {
 	grid-column: span 12;
 }
 
-/*  TODO @SAM pls check */
-.rh-block {
-	padding-bottom: 100px;
-	padding-top: 100px;
-}
-
 .col-lg-hidden {
 	display: none;
 }
 
 /*  TODO @SAM pls check */
+
 @media all and (--bp-until-phone) {
 	.rh-block {
 		padding-bottom: 50px;
@@ -149,6 +150,7 @@ body.admin-bar .header {
 }
 
 /*  TODO @SAM pls check */
+
 @media all and (--bp-medium) {
 	.col-md-1 {
 		grid-column: span 1;
@@ -192,6 +194,7 @@ body.admin-bar .header {
 }
 
 /*  TODO @SAM pls check */
+
 @media all and (--bp-medium) and (max-width: 992px) {
 	.col-md-hidden {
 		display: none;
@@ -199,6 +202,7 @@ body.admin-bar .header {
 }
 
 /*  TODO @SAM pls check */
+
 @media all and (min-width: 993px) {
 	.col-lg-1 {
 		grid-column: span 1;
@@ -246,6 +250,7 @@ body.admin-bar .header {
 }
 
 /*  TODO @SAM pls check */
+
 @media all and (min-width: 1000px) {
 	.col-xl-6 {
 		grid-column: span 6;
@@ -270,13 +275,4 @@ body.admin-bar .header {
 
 .grid-rowspan-3 {
 	grid-row: span 3;
-}
-
-@media all and (min-width: 1480px) {
-	.rh-block {
-		margin-left: auto;
-		margin-right: auto;
-		width: 100%;
-		max-width: 1480px;
-	}
 }
