Adding layout class row--no-gap

--- a/themes/RogersHood-theme/assets/css/frontend/layout/index.css
+++ b/themes/RogersHood-theme/assets/css/frontend/layout/index.css
@@ -91,6 +91,10 @@ body.admin-bar .header {
 	grid-template-columns: repeat(12, 1fr);
 }
 
+.row--no-gap {
+	grid-gap: 0;
+}
+
 .row-10 {
 	grid-template-columns: repeat(10, 1fr);
 }
