--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -3,7 +3,6 @@
  * https://project-website.tld
  *
  */
-/* @import url("example-block.css"); */
 
 @import url("text-and-image-callout.css");
 
@@ -14,3 +13,5 @@
 @import url("hub-cards.css");
 
 @import url("e-books-full-and-text.css");
+
+@import url("informational-health-info.css");
