pushing the founders and product sliders

--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -4,6 +4,7 @@
  *
  */
 
- @import url("faq.css");
- @import url("founders-slider.css");
- @import url("ingredient-grid.css");
+@import url("faq.css");
+@import url("founders-slider.css");
+@import url("ingredient-grid.css");
+@import url('single-product-slider.css');
