--- a/themes/RogersHood-theme/assets/css/frontend/base/button.css
+++ b/themes/RogersHood-theme/assets/css/frontend/base/button.css
@@ -15,6 +15,7 @@
 	border: 1px solid var(--wp--preset--color--light-blue);
 	border-radius: 42px;
 	color: var(--wp--preset--color--black);
+	display: inline-block;
 	padding: 14px 43.5px;
 	text-decoration: none;
 	transition: background 300ms ease-in;
