--- a/themes/RogersHood-theme/assets/css/frontend/global/typography.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/typography.css
@@ -42,12 +42,16 @@ body {
 	border-radius: 4px;
 }
 
-.br-12 {
-	border-radius: 12px;
+.br-8 {
+	border-radius: 8px;
 }
 
 .mb-12 {
 	margin-bottom: 12px;
+}
+
+.mb-16 {
+	margin-bottom: 16px;
 }
 
 .mb-20 {
