--- a/themes/RogersHood-theme/assets/css/blocks/hub-cards.css
+++ b/themes/RogersHood-theme/assets/css/blocks/hub-cards.css
@@ -1,7 +1,5 @@
-.hub-cards__top {
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 600px;
+.hub-cards__title {
+	margin-top: 0;
 }
 
 .hub-card {
@@ -32,6 +30,7 @@
 	padding: 50px 30px 30px 50px;
 	position: absolute;
 	top: 0;
+	width: 100%;
 }
 
 .hub-card__background_image__container {
@@ -64,4 +63,9 @@
 
 .hub-card__cta {
 	align-self: end;
+}
+
+.hub-card__icon {
+	max-height: 60px;
+	width: auto;
 }
