--- a/themes/RogersHood-theme/assets/css/frontend/global/typography.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/typography.css
@@ -26,6 +26,10 @@
 	font-size: 18px;
 }
 
+.fs-20 {
+	font-size: 20px;
+}
+
 .fs-22 {
 	font-size: 22px;
 }
@@ -62,12 +66,8 @@ body {
 	margin-bottom: 50px;
 }
 
-/* TODO - remove temp-button everywhere*/
-
-.temp-button {
-	background: #0a7aff;
-	border-radius: 42px;
-	color: var(--wp--preset--color--white);
-	height: 50px;
-	width: 160px;
+.max-width-headings {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 611px;
 }
