finishing the points information block

--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -9,4 +9,5 @@
 @import url("ingredient-grid.css");
 @import url('single-product-slider.css');
 @import url('tiktok-feed.css');
+@import url('point-information.css');
 
