--- a/themes/RogersHood-theme/assets/css/frontend/base/typography.css
+++ b/themes/RogersHood-theme/assets/css/frontend/base/typography.css
@@ -12,6 +12,11 @@
 	line-height: 1.5;
 }
 
+.text-body-22 {
+	font-size:  22px;
+	line-height: 1.45;
+}
+
 
 .is-style-h1 {
 	font-family: Scilla, serif;
