--- a/themes/RogersHood-theme/assets/css/frontend/base/utils.css
+++ b/themes/RogersHood-theme/assets/css/frontend/base/utils.css
@@ -11,3 +11,16 @@
 	width: 1px;
 	word-wrap: normal !important;
 }
+
+.has-border-radius {
+	border-radius: 12px;
+}
+
+
+.no-padding-bottom {
+	padding-bottom: 0 !important;
+}
+
+.no-padding-top {
+	padding-top: 0 !important;
+}
