adding draft version of the popular reels block

--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -10,4 +10,6 @@
 @import url('single-product-slider.css');
 @import url('tiktok-feed.css');
 @import url('point-information.css');
+@import url('products-grid.css');
+@import url('popular-reels.css');
 
