--- a/themes/RogersHood-theme/assets/css/frontend/components/header.css
+++ b/themes/RogersHood-theme/assets/css/frontend/components/header.css
@@ -21,9 +21,11 @@
 
 .header__menu-mobile {
 	display: none;
+	list-style: none;
 }
 
-.header__menu-mobile-button {
+.header__menu-mobile-button,
+.mobile-nav__close {
 	background: none;
 	border: 0;
 	cursor: pointer;
@@ -38,11 +40,12 @@
 	padding: 0;
 }
 
-.header__menu > li {
-	padding: 8px;
+.header__menu-container-mobile {
+	margin-bottom: 16px;
 }
 
-.header__menu > li > a {
+.header__menu > li > a,
+.header__menu-mobile > li > a {
 	color: var(--wp--preset--color--black);
 	text-decoration: none;
 }
@@ -50,6 +53,20 @@
 .header__woo {
 	display: flex;
 	gap: 22px;
+}
+
+.mobile-header__woo {
+	border-top: 1px solid var(--wp--preset--color--light-blue);
+	display: flex;
+	flex-direction: column;
+	padding-top: 16px;
+}
+
+.mobile-header__woo .header__woo-link {
+	align-items: center;
+	display: flex;
+	text-decoration: none;
+	gap: 8px;
 }
 
 .header__woo-link {
@@ -60,6 +77,12 @@
 	align-items: center;
 	display: flex;
 	gap: 8px;
+}
+
+.mobile-menu-item__container {
+	align-items: center;
+	display: flex;
+	justify-content: space-between;
 }
 
 .wrapper-level-0 .sub-menu .inner {
@@ -76,6 +99,18 @@
 	padding: 8px;
 }
 
+#menu-mobile-menu > .menu-item,
+#mobile-navigation .header__woo-link {
+	padding: 16px 40px;
+}
+
+#menu-mobile-menu
+	> div.wrapper-level-0.menu-item
+	> div.mobile-sub-menu
+	> .menu-item {
+	padding: 16px 20px;
+}
+
 .menu-item-text {
 	align-items: center;
 	color: var(--wp--preset--color--black);
@@ -86,6 +121,11 @@
 	transition: transform 300ms ease-out;
 }
 
+.current-menu-item .mobile-menu-item__container .menu-item-text,
+.current-menu-parent
+	.mobile-menu-item__container:has(+ .mobile-sub-menu)
+	.menu-item-text,
+.mobile-sub-menu .wrapper-level-1.current-menu-item .menu-item-text,
 .current-menu-item .menu-item__container .menu-item-text,
 .current-menu-parent .menu-item__container:has(+ .sub-menu) .menu-item-text,
 .menu-item .current-menu-item .single_menu-item__container .menu-item-text,
@@ -125,8 +165,33 @@
 	z-index: 100;
 }
 
+.mobile-sub-menu {
+	display: none;
+}
+
 .is-active {
 	display: block;
+}
+
+.rotate-90 {
+	transform: rotate(90deg);
+}
+
+.mobile-navigation__container {
+	background-color: var(--wp--preset--color--white);
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	width: 100%;
+	z-index: 99999;
+}
+
+.mobile-nav__inner--header {
+	align-items: center;
+	display: flex;
+	justify-content: space-between;
+	padding: 35px 36px 12px 36px;
 }
 
 @media only screen and (--bp-vertical-tablet) {
@@ -149,9 +214,15 @@
 
 	.header__menu-mobile {
 		display: block;
+		padding: 0;
+		margin: 0;
 	}
 
 	.header__woo > a:nth-child(1) {
 		display: none;
+	}
+
+	.menu-item-text {
+		align-items: start;
 	}
 }
