finishing the category and post grid blocks. Progress on single-post.php

--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -12,4 +12,5 @@
 @import url('point-information.css');
 @import url('products-grid.css');
 @import url('popular-reels.css');
+@import url('category-list.css');
 
