--- a/themes/RogersHood-theme/assets/css/frontend/global/colors.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/colors.css
@@ -20,14 +20,13 @@
 
 :root {
 	--c-white: #fff;
+	--c-black: #000;
+	--c-dark-grey: #5e5e5e;
 
 	--cart-background-beige: #F9F9F9;
 	--blue-background: #e0eaf7;
+	--c-category-fab-background: #e0eaf7;
 }
-
-
-
-
 
 .bg-blue {
 	background-color: var(--blue-background);
@@ -44,3 +43,4 @@
 .bg-gradient-blue {
 	background: linear-gradient(180deg, #E0EAF7 0%, #C2D1DC 100%);
 }
+
