adding skeleton for the reviews slider

--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -13,4 +13,5 @@
 @import url('products-grid.css');
 @import url('popular-reels.css');
 @import url('category-list.css');
+@import url('review-slider.css');
 
