--- a/themes/RogersHood-theme/assets/css/blocks/community-cards.css
+++ b/themes/RogersHood-theme/assets/css/blocks/community-cards.css
@@ -8,8 +8,23 @@
 	margin-bottom: 64px;
 }
 
+@media (--bp-until-medium) {
+	.community-card__row {
+		display: flex;
+		flex-wrap: nowrap;
+		overflow: auto;
+		padding-bottom: 16px;
+	}
+}
+
 .community-card__row {
 	row-gap: 50px;
+}
+
+@media (--bp-until-medium) {
+	.community-card {
+		min-width: 300px;
+	}
 }
 
 .community-card {
@@ -22,16 +37,11 @@
 	text-align: center;
 }
 
-/* TODO - remove bcg and width ofcta */
-
 .community-card__cta {
-	background: var(--wp--preset--color--white);
 	border-radius: 42px;
-	bottom: 50px;
-	height: 50px;
+	bottom: 35px;
 	left: calc(50% - 80px);
 	position: absolute;
-	width: 160px;
 }
 
 @media (--bp-medium) {
