Two Images and Content Block ready for testing

--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -19,5 +19,5 @@
 @import url("community-cards.css");
 @import url("hub-cards.css");
 @import url("e-books-full-and-text.css");
-@import url("informational-health-info.css");
+@import url("two-images-and-content.css");
 @import url("three-steps.css");
