--- a/themes/RogersHood-theme/assets/css/frontend/global/colors.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/colors.css
@@ -22,6 +22,8 @@
 	--c-white: #fff;
 	--c-black: #000;
 	--c-dark-grey: #5e5e5e;
+	--c-off-black: #5c5c5c;
+
 
 	--cart-background-beige: #F9F9F9;
 	--blue-background: #e0eaf7;
