--- a/themes/RogersHood-theme/assets/css/frontend/base/button.css
+++ b/themes/RogersHood-theme/assets/css/frontend/base/button.css
@@ -7,7 +7,8 @@
  * using :where to prevent the specificity increase of using :not
  */
 
-.button {
+.button,
+.rh-button {
 	background-color: var(--wp--preset--color--light-blue);
 	border: 1px solid var(--wp--preset--color--light-blue);
 	border-radius: 42px;
@@ -20,8 +21,11 @@
 	transition: background 300ms ease-in;
 }
 
-.button:hover {
+.button:hover,
+.rh-button:hover {
 	background-color: var(--wp--preset--color--green);
 	border: 1px solid var(--wp--preset--color--green);
 	color: var(--wp--preset--color--white);
 }
+
+
