change css to block css and add splide ext for autoscrolling

--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -5,6 +5,10 @@
  */
 /* @import url("example-block.css"); */
 
+@import url("hero-section.css");
+
+@import url("benefits-section.css");
+
 @import url("text-and-image-callout.css");
 
 @import url("product-includes.css");
