--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -22,3 +22,4 @@
 @import url("three-steps.css");
 @import url("reviews-slider.css");
 @import url("youtube-slider.css");
+@import url("product-benefits.css");
