Product Directons html

--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -23,3 +23,4 @@
 @import url("reviews-slider.css");
 @import url("youtube-slider.css");
 @import url("product-benefits.css");
+@import url("product-directions.css");
