--- a/themes/RogersHood-theme/assets/css/frontend/base/button.css
+++ b/themes/RogersHood-theme/assets/css/frontend/base/button.css
@@ -11,7 +11,7 @@ button:where(:not(.components-button)) {
 	all: unset;
 }
 
-.button:where(:not(.components-button)) {
+.button-rh:where(:not(.components-button)) {
 	background-color: var(--wp--preset--color--light-blue);
 	border: 1px solid var(--wp--preset--color--light-blue);
 	border-radius: 42px;
@@ -21,7 +21,7 @@ button:where(:not(.components-button)) {
 	transition: background 300ms ease-in;
 }
 
-.button:hover:where(:not(.components-button)) {
+.button-rh:hover:where(:not(.components-button)) {
 	background-color: var(--wp--preset--color--green);
 	border: 1px solid var(--wp--preset--color--green);
 	color: var(--wp--preset--color--white);
