--- a/themes/RogersHood-theme/assets/css/frontend/global/typography.css
+++ b/themes/RogersHood-theme/assets/css/frontend/global/typography.css
@@ -70,6 +70,11 @@ body {
 	margin-bottom: 50px;
 }
 
+.mt-0 {
+	margin-top: 0;
+}
+
+
 .max-width-headings {
 	margin-left: auto;
 	margin-right: auto;
